--- a/90_html-parsing.ipynb
+++ b/90_html-parsing.ipynb
@@ -220,7 +220,7 @@
    "source": [
     "## xslt, real content\n",
     "\n",
-    "teleschau_21.10.2020.dat, just one item"
+    "foobar_21.10.2020.dat, just one item"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "source": [
     "import lxml.etree as ET\n",
     "\n",
-    "dom = ET.parse(\"data/teleschau_21.10.2020.dat\")\n",
+    "dom = ET.parse(\"data/foobar_21.10.2020.dat\")\n",
     "print(ET.tostring(dom, pretty_print=True).decode(\"ascii\")[:1200], \"...\")"
    ]
   },
@@ -251,25 +251,25 @@
     "\n",
     "    <xsl:template match=\"NewsItem\">\n",
     "        <artikel>\n",
-    "            <metadaten>\n",
+    "            <meta>\n",
     "                <artikel-id>\n",
     "                    <xsl:value-of select=\"Identification/NewsIdentifier/NewsItemId\"/>\n",
     "                </artikel-id>\n",
     "                <urheberinformation>\n",
     "                    <xsl:value-of select=\"NewsLines/CopyrightLine\"/>\n",
     "                </urheberinformation>\n",
-    "                <autor>\n",
-    "                    <autor-name>\n",
+    "                <aut>\n",
+    "                    <name>\n",
     "                        <xsl:value-of select=\"NewsLines/ByLine\"/>\n",
-    "                    </autor-name>\n",
-    "                </autor>\n",
-    "            </metadaten>\n",
+    "                    </name>\n",
+    "                </aut>\n",
+    "            </meta>\n",
     "            <inhalt>\n",
-    "                <titel-liste>\n",
+    "                <titels>\n",
     "                    <titel>\n",
     "                        <xsl:value-of select=\"NewsLines/HeadLine\"/>\n",
     "                    </titel>\n",
-    "                </titel-liste>\n",
+    "                </titels>\n",
     "            </inhalt>\n",
     "        </artikel>\n",
     "    </xsl:template>\n",
